# vaultkern

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
apps/windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/native/: passkey_plugin.cpp  passkey_plugin.h
apps/windows/src-tauri/permissions/autogenerated/: load_desktop_reconciliation_error.toml  load_desktop_settings.toml  (+4 more)
apps/windows/src-tauri/src/: desktop_settings.rs  lib.rs  main.rs  passkey_plugin.rs  plugin_operation_state.rs  runtime_bridge.rs
apps/windows/src-tauri/tests/: desktop_settings.rs  runtime_bridge.rs
apps/windows/src-tauri/windows/: Package.appxmanifest
crates/vaultkern-core/: Cargo.toml
crates/vaultkern-core/src/: lib.rs  vault_codec.rs
crates/vaultkern-core/tests/: attachment_index_external_fixture_breadth.rs  custom_data_canonical_fallback.rs  external_custom_data_detail_facade.rs  external_database_bin_template_facade.rs  external_database_bin_template_mutation_facade.rs  external_database_custom_data_detail_facade.rs  external_database_custom_data_mutation_facade.rs  external_database_custom_data_semantic_facade.rs  external_database_lifecycle_identity_facade.rs  external_database_lifecycle_identity_mutation_facade.rs  external_database_metadata_facade.rs  external_database_metadata_mutation_facade.rs  external_database_public_custom_data_mutation_facade.rs  external_database_summary_view.rs  external_entry_custom_data_mutation_facade.rs  external_entry_projection_facade.rs  external_file_key_fixture_oracle.rs  external_format400_fixture_oracle.rs  external_group_behavior_detail_projection_facade.rs  external_group_behavior_metadata_mutation_facade.rs  external_group_custom_data_mutation_facade.rs  external_group_detail_projection_facade.rs  external_group_metadata_mutation_facade.rs  external_history_projection_facade.rs  external_key_file_protected_fixture_oracle.rs  external_legacy_rich_fixture_oracle.rs  external_recycle_bin_mutation_facade.rs  external_stable_mutation_facade.rs  external_stable_query_facade.rs  kernel_pause_line_contract.rs  legacy_history_fixture_matrix.rs  vault_codec_contract.rs
crates/vaultkern-crypto/: Cargo.toml
crates/vaultkern-crypto/src/: journal.rs  lib.rs  quick_unlock.rs
crates/vaultkern-kdbx/: Cargo.toml
crates/vaultkern-kdbx/src/: external_kdf.rs  kdf_generation.rs  lib.rs
crates/vaultkern-kdbx/tests/: external_kdbx41_fixture.rs  keepassxc_writer_interop.rs
crates/vaultkern-kdbx/tests/fixtures/: README.md  keepassxc-2.7.6-kdbx4.1-source.xml  keepassxc-2.7.6-kdbx4.1.kdbx
crates/vaultkern-runtime-protocol/: Cargo.toml
crates/vaultkern-runtime-protocol/schemas/: cache_manifest.schema.json  dead_letter_record.schema.json  journal_op_kind.schema.json  journal_record.schema.json  merge_summary_dto.schema.json  platform_record_key.schema.json  quick_unlock_ledger_entry.schema.json  reconciliation_summary_dto.schema.json
crates/vaultkern-runtime-protocol/src/: contracts.rs  framing.rs  lib.rs
crates/vaultkern-runtime-protocol/tests/: contract_freeze.rs  journal_framing.rs  protocol_roundtrip.rs  schema_snapshot.rs
crates/vaultkern-runtime-protocol/tests/fixtures/: cache_manifest.json  dead_letter_record.json  journal_op_passkey_registration.json  journal_op_usage_count.json  journal_record_sealed.json  merge_summary.json  merge_summary_legacy.json  platform_record_key.json  quick_unlock_ledger_entry_enrolled.json  quick_unlock_ledger_entry_needs_reenroll.json  reconciliation_summary.json  reconciliation_summary_legacy.json
crates/vaultkern-uniffi/: Cargo.toml  README.md  uniffi.toml
crates/vaultkern-uniffi/bindings/swift/: MacOSOneDriveTokenAdapter.swift  MacOSUnlockBlobAdapter.swift  SensitiveTypes.swift  VaultKernCore.swift  VaultKernCoreFFI.h  VaultKernCoreFFI.modulemap
crates/vaultkern-uniffi/src/: lib.rs
crates/vaultkern-uniffi/tests/: facade_contract.rs  generated_bindings_contract.rs  macos_onedrive_token_binding_contract.rs  macos_unlock_blob_binding_contract.rs
crates/vaultkern-uniffi/tests/kotlin/: VaultKernSmoke.kt  build.gradle.kts  settings.gradle.kts
crates/vaultkern-uniffi/tests/swift/: VaultKernSmoke.swift
tools/vaultkern-native-setup/: Cargo.toml  README.md  build.rs
tools/vaultkern-native-setup/scripts/: package_windows.sh
tools/vaultkern-native-setup/src/: lib.rs  main.rs
tools/vaultkern-native-setup/windows/: app.manifest
tools/vaultkern-runtime/: Cargo.toml  build.rs
tools/vaultkern-runtime/macos/: Info.plist  SecureEnclaveBridge.swift
tools/vaultkern-runtime/scripts/: install_native_host.sh  install_native_host_macos.sh  package_macos.sh
tools/vaultkern-runtime/src/: autofill_persist.rs  command_loop.rs  journal_segment_store.rs  lib.rs  macos_secure_enclave.rs  main.rs  match_fill.rs  native_host.rs  passkey.rs  passkey_ceremony_transitions.json  protocol_session.rs  quick_unlock_coordinator.rs  quick_unlock_ledger.rs  resident_ipc.rs  resident_protocol.rs  runtime.rs  runtime_api.rs  runtime_dispatch.rs  session.rs  state_paths.rs  sync.rs  unlock.rs  vault_core.rs  vault_format.rs  vault_reference_store.rs
tools/vaultkern-runtime/src/providers/: biometric.rs  catalog.rs  durable_file.rs  local_file.rs  macos_local_authentication.rs  macos_quick_unlock.rs  memory.rs  mod.rs  onedrive.rs  onedrive_token_store.rs  provider.rs  quick_unlock.rs  remote_cache.rs  secure_storage.rs
tools/vaultkern-runtime/src/resident_ipc/: windows.rs
tools/vaultkern-runtime/tests/: macos_package_contract.rs  native_host_manifest_contract.rs  native_messaging_stdio_contract.rs  provider_contract.rs  runtime_local_vault_contract.rs  runtime_module_ownership_contract.rs  runtime_onedrive_contract.rs  runtime_passkey_ceremony_ledger_contract.rs  runtime_persisted_vault_selection_contract.rs  runtime_protocol_architecture_acceptance.rs  runtime_protocol_session_contract.rs  runtime_read_flow_contract.rs  runtime_recent_vault_contract.rs
tools/vaultkern-runtime/tests/support/: mod.rs
(+309 files in other folders)
