[workspace]
resolver = "3"
members = [
    "crates/vaultkern-crypto",
    "crates/vaultkern-model",
    "crates/vaultkern-kdbx",
    "crates/vaultkern-core",
    "crates/vaultkern-runtime-protocol",
    "tools/vkdbx",
    "tools/vaultkern-runtime",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
chacha20 = "0.9"
chrono = { version = "0.4", default-features = false, features = ["std"] }
cipher = "0.4"
data-encoding = "2.6"
flate2 = "1.0"
hmac = "0.12"
rust_argon2 = { package = "rust-argon2", version = "3.0.0" }
salsa20 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
twofish = "0.7"
uuid = { version = "1.8", features = ["std", "v4"] }
xmltree = "0.11"
zeroize = { version = "1.8", features = ["alloc"] }
