[workspace]
resolver = "3"
members = [
    "apps/windows/src-tauri",
    "crates/vaultkern-crypto",
    "crates/vaultkern-model",
    "crates/vaultkern-kdbx",
    "crates/vaultkern-core",
    "crates/vaultkern-runtime-protocol",
    "tools/vkdbx",
    "tools/vaultkern-runtime",
    "tools/vaultkern-native-setup",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
aes = { version = "0.8", features = ["zeroize"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
base64 = "0.22"
cbc = { version = "0.1", features = ["zeroize"] }
chacha20 = { version = "0.9", features = ["zeroize"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
cipher = { version = "0.4", features = ["zeroize"] }
data-encoding = "2.6"
flate2 = "1.0"
hmac = "0.12"
hkdf = "0.12"
psl = "2.1"
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8", "pem"] }
regex = "1"
rust_argon2 = { package = "rust-argon2", version = "3.0.0" }
salsa20 = { version = "0.10", features = ["zeroize"] }
schemars = "0.8"
sha1 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
twofish = { version = "0.7", features = ["zeroize"] }
uuid = { version = "1.8", features = ["std", "v4"] }
xmltree = "0.11"
zeroize = { version = "1.8", features = ["alloc"] }
