[package]
name = "vaultkern-crypto"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
external-fixtures = []

[dependencies]
aes.workspace = true
base64.workspace = true
cbc.workspace = true
chacha20.workspace = true
cipher.workspace = true
data-encoding.workspace = true
hmac.workspace = true
rust_argon2.workspace = true
salsa20.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
twofish.workspace = true
uuid.workspace = true
xmltree.workspace = true
zeroize.workspace = true
