[package]
name = "vaultkern-kdbx"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
external-fixtures = []

[dependencies]
base64.workspace = true
chrono.workspace = true
flate2.workspace = true
vaultkern-crypto = { path = "../vaultkern-crypto" }
vaultkern-model = { path = "../vaultkern-model" }
thiserror.workspace = true
uuid.workspace = true
xmltree.workspace = true
