[package]
name = "vaultkern-runtime-protocol"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
# Generates the frozen JSON Schema artifacts under schemas/ from the Rust
# contract types (000, Execution discipline #1). CI runs the snapshot test
# with this feature enabled.
json-schema = ["dep:schemars"]

[dependencies]
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# base64: builds DeadLetterRecord.frame_b64 fixtures from raw frame bytes.
base64.workspace = true
# Used by the contract-freeze negative tests to execute the format
# constraints (pattern/minLength) frozen in the schema artifacts. The
# jsonschema crate would validate whole documents, but it is not available
# in the offline registry cache; executing the schemas' own regex patterns
# with the regex crate checks the same frozen constraints.
regex.workspace = true
