[package]
name = "vaultkern-uniffi"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
bindgen-cli = ["uniffi/cli"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
thiserror.workspace = true
uniffi = "=0.31.0"
vaultkern-runtime = { path = "../../tools/vaultkern-runtime" }
vaultkern-runtime-protocol = { path = "../vaultkern-runtime-protocol" }
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.10"
vaultkern-core = { path = "../vaultkern-core" }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen-cli"]
