[package]
name = "vaultkern-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
external-fixtures = []

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64.workspace = true
p256.workspace = true
psl.workspace = true
vaultkern-core = { path = "../../crates/vaultkern-core" }
vaultkern-runtime-protocol = { path = "../../crates/vaultkern-runtime-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = { version = "2.10", features = ["json"] }
url = "2.5"
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Security_Credentials_UI"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
mockito = "1.5"
p256.workspace = true
tempfile = "3.10"
