[package]
name = "vaultkern-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
external-fixtures = []

[dependencies]
aes-gcm = { version = "0.10", features = ["zeroize"] }
anyhow = "1.0"
base64.workspace = true
p256.workspace = true
psl.workspace = true
vaultkern-core = { path = "../../crates/vaultkern-core" }
vaultkern-runtime-protocol = { path = "../../crates/vaultkern-runtime-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = { version = "2.10", features = ["json"] }
url = "2.5"
uuid.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Security_Credentials_UI"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
aes = { version = "0.8", features = ["zeroize"] }
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std", "NSDate", "NSError", "NSRunLoop", "NSString", "block2",
] }
objc2-local-authentication = { version = "0.3.2", default-features = false, features = [
    "std", "block2", "LABiometryType", "LAContext",
] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
mockito = "1.5"
p256.workspace = true
tempfile = "3.10"
