[package]
name = "vaultkern-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
external-fixtures = []

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64.workspace = true
p256.workspace = true
psl.workspace = true
vaultkern-core = { path = "../../crates/vaultkern-core" }
vaultkern-runtime-protocol = { path = "../../crates/vaultkern-runtime-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile = "3.10"
ureq = { version = "2.10", features = ["json"] }
url = "2.5"
uuid.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["ApplicationModel", "Foundation", "Management_Deployment", "Security_Credentials_UI", "Storage", "Storage_Search", "Win32_Foundation", "Win32_System_Com", "Win32_System_WinRT", "Win32_UI_Shell"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Security_Cryptography", "Win32_Security_Cryptography_Catalog", "Win32_Security_Cryptography_Sip", "Win32_Security_WinTrust", "Win32_Storage_FileSystem", "Win32_Storage_Packaging_Appx", "Win32_System_Com", "Win32_System_Console", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
mockito = "1.5"
p256.workspace = true
