[package]
name = "vaultkern-windows"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "vaultkern_windows"
path = "src/lib.rs"

[[bin]]
name = "vaultkern-windows"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
vaultkern-runtime = { path = "../../../tools/vaultkern-runtime" }
vaultkern-runtime-protocol = { path = "../../../crates/vaultkern-runtime-protocol" }

[target.'cfg(windows)'.dependencies]
tauri = { version = "=2.11.5" }
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.build-dependencies]
cc = "1"
tauri-build = { version = "=2.6.3" }

[dev-dependencies]
tempfile = "3.10"
vaultkern-core = { path = "../../../crates/vaultkern-core" }
